# wezztershier

./: .gitignore  GRAMMAR.md  README.md  pyproject.toml  wexler.py  wezztershier.py
bak/: sample.lua
src/wezztershier/: __init__.py  __main__.py  cli.py  gui.py  wexler.py  wezzbakmchne.py
src/wezztershier/core/: __init__.py  backup.py  parser.py
src/wezztershier/gui/: __init__.py  main_window.py
src/wezztershier/widgets/: __init__.py  base.py  color.py  factory.py  inputs.py  selectors.py  sliders.py  tables.py
